force-app/main/default/objects/PDPA_and_Market_Consent_History__c/PDPA_and_Market_Consent_History__c.object-meta.xml
<CustomObject>
    <label>PDPA &amp; Market Conduct Consent History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Consent Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDPA &amp; Market Conduct Consent History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>