force-app/main/default/objects/PDPA_and_Market_Consent_History__c/fields/Channel_After_Update__c.field-meta.xml
<CustomField>
    <fullName>Channel_After_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel (After Update)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>