force-app/main/default/objects/PDPA_and_Market_Consent_History__c/fields/Consent_Date_Time_After_Update__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date_Time_After_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Date Time (After Update)</label>
    <type>DateTime</type>
</CustomField>