force-app/main/default/objects/PDPA_and_Market_Consent_History__c/fields/Consent_Sign_Date_Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Consent_Sign_Date_Before_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Sign Date (Before Update)</label>
    <type>Date</type>
</CustomField>