force-app/main/default/objects/PDPA_and_Market_Consent_History__c/fields/ConsentBy_After_Update__c.field-meta.xml
<CustomField>
    <fullName>ConsentBy_After_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee ID /Teller ID (After Update)</label>
    <length>12</length>
    <type>Text</type>
</CustomField>