force-app/main/default/objects/PDPA_and_Market_Consent_History__c/fields/Decription_TH__c.field-meta.xml
<CustomField>
    <fullName>Decription_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Decription (TH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>