force-app/main/default/objects/PDPA_and_Market_Consent_History__c/fields/Need_Update_Flag_After_Update__c.field-meta.xml
<CustomField>
    <fullName>Need_Update_Flag_After_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Need Update Flag (After Update)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>