force-app/main/default/objects/PDPA_and_Market_Consent_History__c/fields/Version_Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Version_Before_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version (Before Update)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>